resumeBuilder/src/App.css
/* ... */
.innerH2 {
  font-size: 1.25rem;
  color: var(--purple);
}

.input-text {
  display: flex;
  flex-direction: row;
  align-items: flex-start;
  color: var(--txt);
  margin-left: 8px;
  font-size: 17px;
}

.eduInputText {
  width: 530px;
  margin-top: 12px;
  margin-bottom: 12px;
}

.input-field {
  border-width: 1px;
  padding: 10px;
  font-size: 1rem;
  gap: 8px;
}

.inputs {
  border-radius: 10px;
  background-color: rgb(61, 61, 64);
  border-color: rgb(61, 61, 64);
  color: white;
  font-size: 17px;
  padding: 10px;
}

.fullWidth {
  width: 91%;
  margin-top: 12px;
}

#country, #endDate {
  margin-left: 24px;
}

.inputs:focus {
  color: rgb(117, 117, 117);
  background-color: black;
  font-family: 'Quicksand', sans-serif;
  border: 2px solid var(--purple);
  transition-duration: .3s;
  color: white;
}

.personal, .professional, .education {
  display: grid;
  gap: 12px;
  background-color: rgb(32, 34, 34);
}

#pers {
  margin-bottom: 8px;
}

.emailNumber {
  display: flex;
  flex-direction: row;
  margin: 0px;
  gap: 40px;
}

.education {
  padding-right: 0px;
  background-color: rgb(32, 34, 34);
  border-radius: 10px;
  margin-bottom: 8px;
}

.certificates {
  display: grid;
  gap: 12px;
  background-color: rgb(32, 34, 34);
  border-radius: 10px;
  padding-right: 0px;
}

#issueDateSubtitle {
  position: relative;
  top: 12px;
}

.skills {
  display: grid;
  gap: 12px;
  background-color: rgb(32, 34, 34);
  border-radius: 10px;
  padding-right: 0px;
}

#profTitle {
  margin-top: 0;
  margin-bottom: 0;
}

#certTitle {
  margin-top: 10px;
}

#educationBottom {
  display: flex;
  flex-direction: column;
  gap: 18px;
  width: 100%;
}

#certificatesBottom {
  display: flex;
  flex-direction: column;
  gap: 18px;
  width: 100%;
}

#certificates {
  margin-bottom: 8px;
}

#skills {
  margin-bottom: 8px;
}

#skillsBottom {
  display: flex;
  flex-direction: column;
  gap: 18px;
  width: 100%;
}

.educationInputs {
  width: 100%;
}

.titleSection {
  display: flex;
  flex-direction: row;
  justify-content: space-between;
  padding: 20px;
}

.eduTitle {
  padding: 20px;
}

.personal {
  padding: 12px;
  background-color: rgb(32, 34, 34);
  border-radius: 10px;
}

.titleSection {
  background-color: rgb(32, 34, 34);
  border-radius: 10px;
  margin-top: 8px;
  margin-bottom: 8px;
}

.certTitle {
  padding: 20px;
  margin-top: 0px;
}

.skillTitle {
  padding: 20px;
  margin-top: 0px;
}

#allProf {
  background-color: rgb(32, 34, 34);
  border-radius: 10px;
}

#careerSummaryPersonal {
  max-width: 529.008px;
  max-height: 400px;
  min-height: 64px;
  border-radius: 10px;
  font-size: 17px;
  font-family: 'Quicksand', sans-serif;
}

#emailPersonal {
  width: 270px;
  margin-top: 12px;
}

#phonePersonal {
  margin-top: 12px;
}



#city, #country, #startDate, #email, #endDate, #phone {
 width: 100%; 
 gap: 12px;
}

.address {
  width: 95.8%;
  margin-top: 12px;
}

#position.inputs {
  width: 96%;
}

.address.inputs {
  width: 94%;
}

html {
  height: 100vh;
}

/* App.css (or your preferred CSS file) */

.accordion {
  display: flex;
  flex-direction: column;
  gap: 2px;
  max-height: 80vh;  /* Default max-height for wider screens */
}

@media (max-width: 1500px) {
  .accordion {
    max-height: none;  /* Remove max-height when the viewport width is 1500px or less */
  }
}

.accordion-section {
  background-color: rgb(29, 29, 32);
  border-radius: 12px;
  padding: 8px;
  padding-left: 12px;
  box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.075);
  margin-bottom: 10px; /* Adds a gap between sections */
  overflow: hidden;
}

.accordion-section.open {
  border-color: #007bff; /* Border color when section is open */
}

.accordion h2 {
  margin: 0;
  padding: 10px;
  cursor: pointer;
}

.accordion-content {
  padding: 10px;
}

.left-half h2 {
  display: flex;
  flex-direction: row-reverse;
  justify-content: space-between;
  font-size: 24px;
}

.open {
  transform: rotate(180deg); /* Rotate the icon 180 degrees when the section is open */
  transition: transform 0.3s ease; /* Apply a 0.3s transition to the transform property */
}

.checkbox {
  height: 25px;
  width: 25px;
}

.checkbox:hover {
  cursor: pointer;
}

#presentBox {
  display: flex;
  flex-direction: row;
  justify-content: flex-end;
  align-items: center;
}

figure {
  max-width: 100%; /* Adjust as needed to control the width */
  max-height: 100%; /* Adjust as needed to control the height */
}

hr {
  width: 100%;
}

.subLabel {
  color: white;
  font-size: 12px;
  padding: 4px;
  margin-left: 8px;
}

.saveCancel {
  display: flex;
  flex-direction: row;
  justify-content: flex-end;
  align-items: center;
}

button {
  width: 88px;
  height: 32px;
  border-radius: 14px;
  border: none;
  color: white;
  background-color: var(--purple);
  font-weight: bold;
}

button:hover {
  cursor: pointer;
}

#userInfo, #employerMonths, #schoolDates {
  display: flex;
  flex-direction: row;
  justify-content: space-between;
}

.editSection {
  overflow: hidden;
}

.editSection:hover {
  cursor: pointer;
}

.bold {
  font-weight: bold;
}

#begin {
  float: right;
  white-space: nowrap;
}

#position {
  width: 95%;
}

.educationInputs {
  width: 95%;
}

.datePickers {
  display: flex;
  flex-direction: row;
  justify-content: space-between;
}

.selectInputs {
  display: flex;
  flex-direction: row;
  gap: 8px;
  z-index: 1;
}

.selectInputs2 {
  padding-top: 12px;
  display: flex;
  flex-direction: row;
  gap: 8px;
  z-index: 1;
}

.presentCheck {
  display: flex;
  flex-direction: row;
  justify-content: flex-end;
  align-items: center;
  margin-right: 10px;
  height: 50px;
  margin-bottom: 10px;
}

.isPresent {
  position: relative;
  bottom: 7.5px;
  right: 8px;
  color: rgb(203, 200, 200);
}

.saveButton {
  position: relative;
  margin-top: 20px;
  left: 297px;
  height: 60px;
  width: 120px;
  border-radius: 20px;
  font-size: 24px;
}
/* ... */

